--- a/scss/layout/header/_header-s.scss
+++ b/scss/layout/header/_header-s.scss
@@ -2,141 +2,119 @@
   height: 270px;
   text-align: center;
 
-  .top-menu {
+  .site-container {
 
-    .btn-top-menu {
-      display: block;
-      position: relative;
-      float: right;
-      padding: 9px 10px;
-      margin: 2px 15px 2px 0;
-      border-radius: 4px;
+    .top-menu {
 
-      &:before, &:after {
-        content: "";
-      }
-
-      &:before {
-        margin-top: 0;
-      }
-
-      span, &:before, &:after {
-        margin-top: 4px;
+      .btn-top-menu {
         display: block;
-        width: 22px;
-        height: 2px;
-        border-radius: 1px;
-        background-color: #fff;
+        position: relative;
+        float: right;
+        padding: 9px 10px;
+        margin: 2px 15px 2px 0;
+        border-radius: 4px;
+        z-index: 2;
+
+        &:before, &:after {
+          content: "";
+        }
+
+        &:before {
+          margin-top: 0;
+        }
+
+        span, &:before, &:after {
+          margin-top: 4px;
+          display: block;
+          width: 22px;
+          height: 2px;
+          border-radius: 1px;
+          background-color: #fff;
+        }
+      }
+
+      ul {        
+        position: absolute;
+        z-index: 1;
+        padding-left: 0;
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.5s;
+        @include transform(translate(0, 5px));
+        width: 100%;
+        text-align: center;
+
+        li {
+          display: list-item;
+          color: #fff;
+          list-style: none;
+          padding: 0 15px;
+          background: black;
+          margin: 0;
+
+          &.img.tablet {
+            display: block;
+            background-color: black;
+            width: 100%;
+            background-position: 50%;
+
+            a {
+              width: 100%;
+            }
+          }
+
+          &.img {
+            display: none;
+          }
+        }
       }
     }
 
-    ul {
-      top: 41px;
-      position: absolute;
-      z-index: 1;
-      padding-left: 0;
-      visibility: hidden;
-      opacity: 0;
-      transition: all 0.5s;
-      @include transform(translate(0, 5px));
-      width: 100%;
-      text-align: center;
+    .logo {
+      display: inline;
+      line-height: 230px;
 
-      li {
-        display: list-item;
-        color: #fff;
-        list-style: none;
-        padding: 0 15px;
-        background: black;
-        margin: 0;
+      a {
+        top: 0px;
 
-        &.img.tablet {
-          display: block;
-          background-color: black;
+        img {
           width: 100%;
-          background-position: 50%;
+          height: auto;
+        }
+      }
+    }
+
+    .nav {
+
+      .btn-nav {
+        display: block;
+        width: 100%;
+        height: 41px;
+        color: #fff;
+        padding: 12px 10px;
+        font: 12px $Montserrat;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+      }
+
+      ul {
+        position: absolute;
+        z-index: 1;
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.5s;
+        @include transform(translate(0, -5px));
+        width: 100%;
+        text-align: center;
+
+        li {
+          display: list-item;
+          background: image_url("bg/menu-wood.jpg");
 
           a {
-            width: 100%;
-          }
-        }
-
-        &.img {
-          display: none;
-        }
-
-        &.active-trail {
-        }
-
-        a {
-
-          &:hover {
-
-          }
-
-          &.active-trail {
-
-          }
-        }
-      }
-    }
-  }
-
-  .logo {
-    display: inline;
-    line-height: 230px;
-
-    a {
-      top: 0px;
-      img {
-        width: 100%;
-        height: auto;
-      }
-
-      h1 {
-
-      }
-    }
-  }
-
-  .nav {
-
-    .btn-nav {
-      display: block;
-      width: 100%;
-      height: 41px;
-      color: #fff;
-      padding: 12px 10px;
-      font: 12px $Montserrat;
-      text-decoration: none;
-      text-transform: uppercase;
-      letter-spacing: 3px;
-    }
-
-    ul {
-      position: absolute;
-      z-index: 1;
-      visibility: hidden;
-      opacity: 0;
-      transition: all 0.5s;
-      @include transform(translate(0, 5px));
-      width: 100%;
-      text-align: center;
-
-      li {
-        display: list-item;
-        background: image_url("bg/menu-wood.jpg");
-
-        a {
-          padding: 12px 10px;
-          font: 12px $Montserrat;
-
-          &:hover {
-
-          }
-
-          &.active-trail {
-
+            padding: 12px 10px;
+            font: 12px $Montserrat;
           }
         }
       }
@@ -146,24 +124,37 @@
 
 .nav-active {
 
-  .nav {
+  .site-header {
 
-    ul {
-      visibility: visible;
-      opacity: 1;
-      @include transform(translate(0, 0));
+    .site-container {
+
+      .nav {
+
+        ul {
+          visibility: visible;
+          opacity: 1;
+          @include transform(translate(0, 0));
+        }
+      }
     }
   }
 }
 
 .top-menu-active {
 
-  .top-menu {
+  .site-header {
 
-    ul {
-      visibility: visible;
-      opacity: 1;
-      @include transform(translate(0, 0));
+    .site-container {
+
+      .top-menu {
+
+        ul {
+          visibility: visible;
+          opacity: 1;
+          @include transform(translate(0, 0));
+        }
+      }
     }
   }
 }
+
