--- a/scss/layout/header/_header-s.scss
+++ b/scss/layout/header/_header-s.scss
@@ -40,9 +40,10 @@
         visibility: hidden;
         opacity: 0;
         transition: all 0.5s;
-        @include transform(translate(0, 5px));
+        @include transform(translate(0, -5px));
         width: 100%;
         text-align: center;
+        background: black;
 
         li {
           display: list-item;
@@ -52,19 +53,16 @@
           background: black;
           margin: 0;
 
-          &.img.tablet {
-            display: block;
-            background-color: black;
-            width: 100%;
-            background-position: 50%;
-
-            a {
-              width: 100%;
-            }
+          &:first-child {
+            margin-top: 64px;
           }
 
           &.img {
-            display: none;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            margin-left: -90px;
+            width: 100%;
           }
         }
       }
