Pravki ot Vani 2.0 pered pravkoy na mobil

--- a/scss/common/_settings.scss
+++ b/scss/common/_settings.scss
@@ -11,7 +11,7 @@ $width-tablet: 768px;
 $width-mobile: 480px;
 
 //fonts
-$voltaire: voltaire;
-$Montserrat: Montserrat;
-$Montserrat-bold: Montserrat-bold;
-$Gotham: Gotham;
+$voltaire-regular: voltaire-regular;
+$montserrat-regular: montserrat-regular;
+$montserrat-bold: montserrat-bold;
+$gothamhtf-mediumcondenced: gothamhtf-mediumcondenced;
