--- a/scss/forms/_forms.scss
+++ b/scss/forms/_forms.scss
@@ -2,7 +2,7 @@
 
 	.form-item, .form-actions {
 		margin: 0 0 12px;
-		font: 11px/17px $Montserrat;
+		font: 11px/17px $montserrat-regular;
 		text-transform: uppercase;
 		color: #193739;
 
