--- a/scss/blocks/cols/_cols.scss
+++ b/scss/blocks/cols/_cols.scss
@@ -30,6 +30,7 @@
 			height: 100%;
 			border: 1px solid #314c4e;
 			@include border-radius(20px);
+      margin-bottom: 30px;
 
 			h3 {
 				padding: 5px 0 6px;
@@ -41,7 +42,7 @@
 
 				span {
 					color: #fff;
-					font: normal 30px/45px $voltaire;
+					font: normal 30px/45px $voltaire-regular;
 					text-transform: uppercase;
 					display: inline-block;
 					height: 40px;
@@ -79,13 +80,13 @@
 				}
 
 				h4 {
-					font: 24px/24px $Montserrat-bold;
+					font: 24px/24px $montserrat-bold;
 					color: #336666;
 					margin: 0 0 2px;
 				}
 
 				span {
-					font: 15px/20px $Montserrat;
+					font: 15px/20px $montserrat-regular;
 					color: #7e7e7e;
 					text-transform: uppercase;
 					margin-bottom: 10px;
