--- a/scss/common/_defaults.scss
+++ b/scss/common/_defaults.scss
@@ -8,7 +8,7 @@ body {
 	font-size: 13px;
 	/*min-width: 1300px;*/
 	background: image-url("bg/bg.jpg");
-	font-family: $Montserrat;
+	font-family: $montserrat-regular;
 	line-height: 1.6;
 }
 
