--- a/scss/common/_fonts.scss
+++ b/scss/common/_fonts.scss
@@ -1,31 +1,74 @@
-@include font-face("voltaire", font-files(
-		"voltaire-regular-webfont.woff",
-		"voltaire-regular-webfont.ttf",
-		"voltaire-regular-webfont.svg"
-),
-	"voltaire-regular-webfont.eot" /* относительный путь к .eot файлу для IE */
-);
 
-@include font-face("Montserrat", font-files(
-		"montserrat-regular-webfont.woff",
-		"montserrat-regular-webfont.ttf",
-		"montserrat-regular-webfont.svg"
-),
-	"montserrat-regular-webfont.eot" /* относительный путь к .eot файлу для IE */
-);
-
+/*
 @include font-face("Montserrat-bold", font-files(
 		"montserrat-bold-webfont.woff",
 		"montserrat-bold-webfont.ttf",
 		"montserrat-bold-webfont.svg"
 ),
-	"montserrat-bold-webfont.eot" /* относительный путь к .eot файлу для IE */
+	"montserrat-bold-webfont.eot" */
+/* относительный путь к .eot файлу для IE *//*
+
 );
 
-@include font-face("Gotham", font-files(
-		"gothamhtf-mediumcondenced-webfont.woff",
-		"gothamhtf-mediumcondenced-webfont.ttf",
-		"gothamhtf-mediumcondenced-webfont.svg"
-),
-	"gothamhtf-mediumcondenced-webfont.eot" /* относительный путь к .eot файлу для IE */
-);
+*/
+
+
+@font-face {
+  font-family: 'voltaire-regular';
+  src: url('../fonts/voltaire-regular-webfont.eot');
+  src: url('../fonts/voltaire-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/voltaire-regular-webfont.woff') format('woff'),
+  url('../fonts/voltaire-regular-webfont.woff2') format('woff2'),
+  url('../fonts/voltaire-regular-webfont.ttf') format('truetype'),
+  url('../fonts/voltaire-regular-webfont.svg#voltaire-regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserrat-regular';
+  src: url('../fonts/montserrat-regular-webfont.eot');
+  src: url('../fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-regular-webfont.woff') format('woff'),
+  url('../fonts/montserrat-regular-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-regular-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-regular-webfont.svg#montserrat-regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'gothamhtf-mediumcondenced';
+  src: url('../fonts/gothamhtf-mediumcondenced-webfont.eot');
+  src: url('../fonts/gothamhtf-mediumcondenced-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/gothamhtf-mediumcondenced-webfont.woff') format('woff'),
+  url('../fonts/gothamhtf-mediumcondenced-webfont.woff2') format('woff2'),
+  url('../fonts/gothamhtf-mediumcondenced-webfont.ttf') format('truetype'),
+  url('../fonts/gothamhtf-mediumcondenced-webfont.svg#mgothamhtf-mediumcondenced') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'gothamhtf-mediumcondenced';
+  src: url('../fonts/gothamhtf-mediumcondenced-webfont.eot');
+  src: url('../fonts/gothamhtf-mediumcondenced-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/gothamhtf-mediumcondenced-webfont.woff') format('woff'),
+  url('../fonts/gothamhtf-mediumcondenced-webfont.woff2') format('woff2'),
+  url('../fonts/gothamhtf-mediumcondenced-webfont.ttf') format('truetype'),
+  url('../fonts/gothamhtf-mediumcondenced-webfont.svg#mgothamhtf-mediumcondenced') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'montserrat-bold';
+  src: url('../fonts/montserrat-bold-webfont.eot');
+  src: url('../fonts/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/montserrat-bold-webfont.woff') format('woff'),
+  url('../fonts/montserrat-bold-webfont.woff2') format('woff2'),
+  url('../fonts/montserrat-bold-webfont.ttf') format('truetype'),
+  url('../fonts/montserrat-bold-webfont.svg#montserrat-bold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
