--- a/scss/forms/_newsletter.scss
+++ b/scss/forms/_newsletter.scss
@@ -44,7 +44,7 @@
 	}
 
 	.select {
-		font: 15px/17px $Montserrat-bold;
+		font: 15px/17px $montserrat-bold;
 		height: 34px;
 		width: 100%;
 		@include border-radius(5px);
@@ -77,6 +77,7 @@
 
 	.field-captcha {
 		clear: left;
+    margin-bottom: 30px;
 
 		.captcha-img-container {
 			@include clearfix();
@@ -85,7 +86,7 @@
 			a, img {
 				float: left;
 				width: 50%;
-				font: 11px/17px $Montserrat;
+				font: 11px/17px $montserrat-regular;
 				text-transform: uppercase;
 				line-height: 50px;
 				text-decoration: none;
@@ -102,7 +103,7 @@
 			}
 
 			label {
-				font: 11px/17px $Montserrat;
+				font: 11px/17px $montserrat-regular;
 				color: #929292;
 			}
 		}
