--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -1,22 +1,51 @@
+@charset "UTF-8";
+/*
+@include font-face("Montserrat-bold", font-files(
+		"montserrat-bold-webfont.woff",
+		"montserrat-bold-webfont.ttf",
+		"montserrat-bold-webfont.svg"
+),
+	"montserrat-bold-webfont.eot" */
+/* ð¥Ðéð¢ð¥Ðüð©ÐéðÁð╗Ðîð¢Ðïð╣ ð┐ÐâÐéÐî ð║ .eot Ðäð░ð╣ð╗Ðâ ð┤ð╗ÐÅ IE */
+                                                                      /*
+
+);
+
+*/
 @font-face {
-  font-family: "voltaire";
-  src: url('../fonts/voltaire-regular-webfont.eot');
-  src: url('../fonts/voltaire-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/voltaire-regular-webfont.woff') format('woff'), url('../fonts/voltaire-regular-webfont.ttf') format('truetype'), url('../fonts/voltaire-regular-webfont.svg') format('svg');
+  font-family: 'voltaire-regular';
+  src: url("../fonts/voltaire-regular-webfont.eot");
+  src: url("../fonts/voltaire-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/voltaire-regular-webfont.woff") format("woff"), url("../fonts/voltaire-regular-webfont.woff2") format("woff2"), url("../fonts/voltaire-regular-webfont.ttf") format("truetype"), url("../fonts/voltaire-regular-webfont.svg#voltaire-regular") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-  font-family: "Montserrat";
-  src: url('../fonts/montserrat-regular-webfont.eot');
-  src: url('../fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/montserrat-regular-webfont.woff') format('woff'), url('../fonts/montserrat-regular-webfont.ttf') format('truetype'), url('../fonts/montserrat-regular-webfont.svg') format('svg');
+  font-family: 'montserrat-regular';
+  src: url("../fonts/montserrat-regular-webfont.eot");
+  src: url("../fonts/montserrat-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-regular-webfont.woff") format("woff"), url("../fonts/montserrat-regular-webfont.woff2") format("woff2"), url("../fonts/montserrat-regular-webfont.ttf") format("truetype"), url("../fonts/montserrat-regular-webfont.svg#montserrat-regular") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-  font-family: "Montserrat-bold";
-  src: url('../fonts/montserrat-bold-webfont.eot');
-  src: url('../fonts/montserrat-bold-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/montserrat-bold-webfont.woff') format('woff'), url('../fonts/montserrat-bold-webfont.ttf') format('truetype'), url('../fonts/montserrat-bold-webfont.svg') format('svg');
+  font-family: 'gothamhtf-mediumcondenced';
+  src: url("../fonts/gothamhtf-mediumcondenced-webfont.eot");
+  src: url("../fonts/gothamhtf-mediumcondenced-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/gothamhtf-mediumcondenced-webfont.woff") format("woff"), url("../fonts/gothamhtf-mediumcondenced-webfont.woff2") format("woff2"), url("../fonts/gothamhtf-mediumcondenced-webfont.ttf") format("truetype"), url("../fonts/gothamhtf-mediumcondenced-webfont.svg#mgothamhtf-mediumcondenced") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 @font-face {
-  font-family: "Gotham";
-  src: url('../fonts/gothamhtf-mediumcondenced-webfont.eot');
-  src: url('../fonts/gothamhtf-mediumcondenced-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/gothamhtf-mediumcondenced-webfont.woff') format('woff'), url('../fonts/gothamhtf-mediumcondenced-webfont.ttf') format('truetype'), url('../fonts/gothamhtf-mediumcondenced-webfont.svg') format('svg');
+  font-family: 'gothamhtf-mediumcondenced';
+  src: url("../fonts/gothamhtf-mediumcondenced-webfont.eot");
+  src: url("../fonts/gothamhtf-mediumcondenced-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/gothamhtf-mediumcondenced-webfont.woff") format("woff"), url("../fonts/gothamhtf-mediumcondenced-webfont.woff2") format("woff2"), url("../fonts/gothamhtf-mediumcondenced-webfont.ttf") format("truetype"), url("../fonts/gothamhtf-mediumcondenced-webfont.svg#mgothamhtf-mediumcondenced") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'montserrat-bold';
+  src: url("../fonts/montserrat-bold-webfont.eot");
+  src: url("../fonts/montserrat-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/montserrat-bold-webfont.woff") format("woff"), url("../fonts/montserrat-bold-webfont.woff2") format("woff2"), url("../fonts/montserrat-bold-webfont.ttf") format("truetype"), url("../fonts/montserrat-bold-webfont.svg#montserrat-bold") format("svg");
+  font-weight: normal;
+  font-style: normal;
 }
 /*! normalize.css v2.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
@@ -430,7 +459,7 @@ body {
   font-size: 13px;
   /*min-width: 1300px;*/
   background: url('../images/bg/bg.jpg');
-  font-family: Montserrat;
+  font-family: montserrat-regular;
   line-height: 1.6;
 }
 
@@ -474,7 +503,7 @@ ul li {
 
 .form .form-item, .form .form-actions {
   margin: 0 0 12px;
-  font: 11px/17px Montserrat;
+  font: 11px/17px montserrat-regular;
   text-transform: uppercase;
   color: #193739;
 }
@@ -523,7 +552,7 @@ ul li {
   width: 25%;
 }
 .form-newsletter .select {
-  font: 15px/17px Montserrat-bold;
+  font: 15px/17px montserrat-bold;
   height: 34px;
   width: 100%;
   -moz-border-radius: 5px;
@@ -553,6 +582,7 @@ ul li {
 }
 .form-newsletter .field-captcha {
   clear: left;
+  margin-bottom: 30px;
 }
 .form-newsletter .field-captcha .captcha-img-container {
   margin-bottom: 12px;
@@ -568,7 +598,7 @@ ul li {
 .form-newsletter .field-captcha .captcha-img-container a, .form-newsletter .field-captcha .captcha-img-container img {
   float: left;
   width: 50%;
-  font: 11px/17px Montserrat;
+  font: 11px/17px montserrat-regular;
   text-transform: uppercase;
   line-height: 50px;
   text-decoration: none;
@@ -587,7 +617,7 @@ ul li {
   width: 50%;
 }
 .form-newsletter .field-captcha .form-item label {
-  font: 11px/17px Montserrat;
+  font: 11px/17px montserrat-regular;
   color: #929292;
 }
 
@@ -626,7 +656,7 @@ ul li {
   padding: 0 25px;
 }
 .site-header .site-container .top-menu ul li.img {
-  background: url('../images/bg/top-men-centr.png') no-repeat 0 0;
+  background: url('../images/bg/top-menu-logo.png') no-repeat 0 0;
 }
 .site-header .site-container .top-menu ul li.img a {
   text-indent: -9999px;
@@ -638,7 +668,7 @@ ul li {
 }
 .site-header .site-container .top-menu ul li a {
   color: #86827c;
-  font: 17px/41px Gotham;
+  font: 17px/41px gothamhtf-mediumcondenced;
   letter-spacing: 0.5px;
   text-decoration: none;
   text-transform: uppercase;
@@ -647,10 +677,7 @@ ul li {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
-.site-header .site-container .top-menu ul li a:hover {
-  color: #fff;
-}
-.site-header .site-container .top-menu ul li a.active-trail {
+.site-header .site-container .top-menu ul li a:hover, .site-header .site-container .top-menu ul li a.active-trail {
   color: #fff;
 }
 .site-header .site-container .logo {
@@ -704,7 +731,7 @@ ul li {
   display: block;
   padding: 11px 35px;
   letter-spacing: 3px;
-  font: 14px Montserrat;
+  font: 14px montserrat-regular;
   text-decoration: none;
   text-transform: uppercase;
   -moz-transition: all 0.3s;
@@ -716,14 +743,18 @@ ul li {
   color: gray;
 }
 .site-header .site-container .nav ul li a.active-trail {
-  background: #FFF url("../images/bg/menu-wood.jpg") no-repeat 60%;
+  background: #FFF url('../images/bg/menu-wood.jpg') no-repeat 60%;
   background-blend-mode: hard-light;
 }
 .site-header .site-container .social-share {
   position: absolute;
   bottom: 5px;
   left: 50%;
-  margin-left: -141px;
+  /*margin-left: -141px;*/
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
   background: url('../images/bg/social-wood-menu.png');
   width: 282px;
   height: 85px;
@@ -763,6 +794,7 @@ ul li {
 
 .outer-wrapper {
   margin-bottom: 100px;
+  overflow: hidden;
 }
 
 .content-wrapper .content-top {
@@ -789,8 +821,8 @@ ul li {
 }
 
 .btn-wrapper {
-  margin: 30px 0;
   text-align: center;
+  margin-bottom: 30px;
 }
 .btn-wrapper .btn {
   display: inline-block;
@@ -806,14 +838,13 @@ ul li {
   -moz-box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.5);
   -webkit-box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.5);
   box-shadow: 0px 3px 4px 0px rgba(0, 0, 0, 0.5);
-  background-color: #45d0d0;
   text-align: center;
   min-width: 160px;
   height: 35px;
   padding: 0 10px;
   border: 0;
   text-decoration: none;
-  font: 12px Montserrat;
+  font: 12px montserrat-regular;
   color: #fff;
   text-shadow: -0.707px 0.707px 1px rgba(0, 0, 0, 0.25);
   text-transform: uppercase;
@@ -861,6 +892,7 @@ ul li {
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
   border-radius: 20px;
+  margin-bottom: 30px;
 }
 .cols .col .col-item h3 {
   padding: 5px 0 6px;
@@ -874,7 +906,7 @@ ul li {
 }
 .cols .col .col-item h3 span {
   color: #fff;
-  font: normal 30px/45px voltaire;
+  font: normal 30px/45px voltaire-regular;
   text-transform: uppercase;
   display: inline-block;
   height: 40px;
@@ -906,12 +938,12 @@ ul li {
   border-bottom: none;
 }
 .cols .col .col-item .col-event h4 {
-  font: 24px/24px Montserrat-bold;
+  font: 24px/24px montserrat-bold;
   color: #336666;
   margin: 0 0 2px;
 }
 .cols .col .col-item .col-event span {
-  font: 15px/20px Montserrat;
+  font: 15px/20px montserrat-regular;
   color: #7e7e7e;
   text-transform: uppercase;
   margin-bottom: 10px;
@@ -1050,43 +1082,6 @@ html[xmlns] .flexslider .slides {
 }
 
 /* ====================================================================================================================
- * DEFAULT THEME
- * ====================================================================================================================*/
-.flex-control-nav {
-  width: 100%;
-  position: absolute;
-  top: 10px;
-  text-align: center;
-  z-index: 0;
-}
-
-.flex-control-nav li {
-  margin: 0 6px;
-  display: inline-block;
-}
-
-.flex-control-paging li a {
-  width: 11px;
-  height: 11px;
-  display: block;
-  background: #fff;
-  cursor: pointer;
-  text-indent: -9999px;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  border-radius: 20px;
-}
-
-.flex-control-paging li a:hover {
-  background: red;
-}
-
-.flex-control-paging li a.flex-active {
-  background: red;
-  cursor: default;
-}
-
-/* ====================================================================================================================
  * RESPONSIVE
  * ====================================================================================================================*/
 @media screen and (max-width: 860px) {
@@ -1115,9 +1110,9 @@ Version: 3.5.4 Timestamp: Sun Aug 30 13:30:32 EDT 2015
 .select2-search,
 .select2-search input {
   /*
-  	Force border-box so that % widths fit the parent
-  	container without overlap because of margin/padding.
-  	More Info : http://www.quirksmode.org/css/box.html
+    Force border-box so that % widths fit the parent
+    container without overlap because of margin/padding.
+    More Info : http://www.quirksmode.org/css/box.html
   */
   -webkit-box-sizing: border-box;
   /* webkit */
@@ -1853,7 +1848,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     height: 41px;
     color: #fff;
     padding: 12px 10px;
-    font: 12px Montserrat;
+    font: 12px montserrat-regular;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 3px;
@@ -1877,7 +1872,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   }
   .site-header .site-container .nav ul li a {
     padding: 12px 10px;
-    font: 12px Montserrat;
+    font: 12px montserrat-regular;
   }
 
   .nav-active .site-header .site-container .nav ul {
@@ -1948,11 +1943,11 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     width: 195px;
   }
   .site-header .site-container .top-menu ul li a {
-    font: 13px/41px Gotham;
+    font: 13px/41px gothamhtf-mediumcondenced;
   }
   .site-header .site-container .nav ul li a {
     padding: 12px 10px;
-    font: 12px Montserrat;
+    font: 12px montserrat-regular;
   }
 
   .cols {
