Pravki ot Vani 2.1 mobil inspector popravil

--- a/scss/blocks/cols/_cols-s.scss
+++ b/scss/blocks/cols/_cols-s.scss
@@ -1,3 +1,20 @@
-.cols {
-  width: 342px;
+.site-container {
+  width: 99%;
+
+  .cols {
+    width: 100%;
+
+    .col {
+      margin-right: 0px;
+      width: 100%;
+
+      .col-item .col-cont {
+        width: 100%;
+
+        img {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
