--- a/scss/forms/_newsletter.scss
+++ b/scss/forms/_newsletter.scss
@@ -1,7 +1,7 @@
 .form-newsletter {
 
 	.field-birthday-month, .field-birthday-day, .field-city, .field-state {
-		margin-right: 8px;
+		margin-right: 2%;
 	}
 
 	.field-birthday-month, .field-birthday-day, .field-birthday-year, .field-city, .field-state, .field-zip {
