--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -522,7 +522,7 @@ ul li {
 }
 
 .form-newsletter .field-birthday-month, .form-newsletter .field-birthday-day, .form-newsletter .field-city, .form-newsletter .field-state {
-  margin-right: 8px;
+  margin-right: 2%;
 }
 .form-newsletter .field-birthday-month, .form-newsletter .field-birthday-day, .form-newsletter .field-birthday-year, .form-newsletter .field-city, .form-newsletter .field-state, .form-newsletter .field-zip {
   float: left;
@@ -1927,8 +1927,21 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
     height: auto;
   }
 
-  .cols {
-    width: 342px;
+  .site-container {
+    width: 99%;
+  }
+  .site-container .cols {
+    width: 100%;
+  }
+  .site-container .cols .col {
+    margin-right: 0px;
+    width: 100%;
+  }
+  .site-container .cols .col .col-item .col-cont {
+    width: 100%;
+  }
+  .site-container .cols .col .col-item .col-cont img {
+    width: 100%;
   }
 }
 @media (min-width: 768px) and (max-width: 1249px) {
