--- a/scss/blocks/think-us/_think-us-s.scss
+++ b/scss/blocks/think-us/_think-us-s.scss
@@ -1,10 +1,8 @@
 .think-us {
   width: 100%;
   position: static;
+  transform: none;
   height: auto;
-
-  .outer-th {
-  }
 
   .think-wrapper {
     width: 90%;
