--- a/scss/blocks/think-us/_think-us.scss
+++ b/scss/blocks/think-us/_think-us.scss
@@ -1,9 +1,8 @@
 .think-us {
   position: absolute;
   bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  left: 50%;
+  @include transform(translate(-50%, 0));
   height: 198px;
   width: 654px;
   background-color: #F8FDFB;
