--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -750,7 +750,6 @@ ul li {
   position: absolute;
   bottom: 5px;
   left: 50%;
-  /*margin-left: -141px;*/
   -moz-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
   -webkit-transform: translate(-50%, 0);
@@ -957,9 +956,11 @@ ul li {
 .think-us {
   position: absolute;
   bottom: 0;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+  left: 50%;
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
   height: 198px;
   width: 654px;
   background-color: #F8FDFB;
@@ -1900,6 +1901,7 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close {
   .think-us {
     width: 100%;
     position: static;
+    transform: none;
     height: auto;
   }
   .think-us .think-wrapper {
