--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -656,7 +656,7 @@ ul li {
   padding: 0 25px;
 }
 .site-header .site-container .top-menu ul li.img {
-  background: url('../images/bg/top-menu-logo.png') no-repeat 0 0;
+  background: url('../images/bg/logo.png') no-repeat 0 0;
 }
 .site-header .site-container .top-menu ul li.img a {
   text-indent: -9999px;
