--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -24,6 +24,7 @@
 @import "blocks/cols/cols";
 @import "blocks/think-us/think-us";
 @import "blocks/gallery/gallery";
+@import "blocks/text-img/text-img";
 
 //pages
 
