--- a/scss/layout/header/_header.scss
+++ b/scss/layout/header/_header.scss
@@ -29,7 +29,7 @@
           padding: 0 25px;
 
           &.img {
-            background: image_url("bg/top-menu-logo.png") no-repeat 0 0;
+            background: image_url("bg/logo.png") no-repeat 0 0;
 
             a {
               @include text-hide();
