--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -656,7 +656,7 @@ ul li {
   padding: 0 25px;
 }
 .site-header .site-container .top-menu ul li.img {
-  background: url('../images/bg/top-menu-logo.png') no-repeat 0 0;
+  background: url('../images/bg/logo.png') no-repeat 0 0;
 }
 .site-header .site-container .top-menu ul li.img a {
   text-indent: -9999px;
@@ -953,6 +953,21 @@ ul li {
   line-height: 22px;
 }
 
+.b-cols.col-two.style-a .col {
+  float: left;
+  margin-right: 31px;
+  width: 545px;
+}
+.b-cols.col-two.style-a .col.col-2 {
+  margin: 0;
+}
+.b-cols.col-two.style-a .col p {
+  font-size: 14px;
+  font-family: arial;
+  font-style: italic;
+  color: #7e7e7e;
+}
+
 .think-us {
   position: absolute;
   bottom: 0;
@@ -997,6 +1012,39 @@ ul li {
 .think-us .think-wrapper p {
   color: #336666;
   font-weight: bold;
+}
+
+.b-text-img {
+  margin: 0 auto 66px;
+  width: 1110px;
+}
+.b-text-img:after {
+  content: " ";
+  display: block;
+  height: 0;
+  clear: both;
+  overflow: hidden;
+  visibility: hidden;
+}
+.b-text-img .text {
+  float: left;
+  width: 70%;
+  color: #818181;
+  font-family: "Arial";
+  line-height: 30px;
+}
+.b-text-img .text h2 {
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.b-text-img .text p {
+  font-size: 15px;
+  text-align: justify;
+}
+.b-text-img .img {
+  width: 30%;
+  float: right;
 }
 
 /*
