Menu v.1.2.1 do otruba sveta

--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -1032,6 +1032,7 @@ ul li {
   color: #818181;
   font-family: "Arial";
   line-height: 30px;
+  padding-right: 50px;
 }
 .b-text-img .text h2 {
   font-size: 16px;
