--- a/scss/blocks/text-img/_text-img.scss
+++ b/scss/blocks/text-img/_text-img.scss
@@ -9,6 +9,7 @@
     color: #818181;
     font-family: "Arial";
     line-height: 30px;
+    padding-right: 50px;
 
     h2 {
       font-size: 16px;
