--- a/scss/blocks/text-img/_text-img.scss
+++ b/scss/blocks/text-img/_text-img.scss
@@ -1,35 +1,41 @@
-.b-text-img {
-  @include clearfix();
-  margin: 0 auto 66px;
-  width: 1110px;
+.text-img-wrapper {
+  position: relative;
+  left: 50%;
+  padding-top: 66px;
 
-  .text {
-    float: left;
-    width: 70%;
-    color: #818181;
-    font-family: "Arial";
-    line-height: 30px;
-    padding-right: 50px;
+  .b-text-img {
+    @include clearfix();
+    margin: 0 auto 66px;
+    width: 1110px;
 
-    h2 {
-      font-size: 16px;
-      font-weight: bold;
-      text-transform: uppercase;
+    .text {
+      float: left;
+      width: 69%;
+      color: #818181;
+      font-family: "Arial";
+      line-height: 30px;
+      padding-right: 50px;
+
+      h2 {
+        font-size: 16px;
+        font-weight: bold;
+        text-transform: uppercase;
+
+      }
+
+      p {
+        font-size: 15px;
+        text-align: justify;
+      }
 
     }
 
-    p {
-      font-size: 15px;
-      text-align: justify;
+    .img {
+      width: 31%;
+      float: right;
     }
 
   }
-
-  .img {
-    width: 30%;
-    float: right;
-  }
-
 }
 
 
