--- a/scss/blocks/text-img/_text-img.scss
+++ b/scss/blocks/text-img/_text-img.scss
@@ -2,10 +2,13 @@
   position: relative;
   left: 50%;
   padding-top: 66px;
+  background: image_url("bg/text-img-bg.jpg") 0% 100%;
+  margin-bottom: 50px;
+  border-bottom: 2px gray solid;
 
   .b-text-img {
     @include clearfix();
-    margin: 0 auto 66px;
+    margin: 0 auto 20px;
     width: 1110px;
 
     .text {
