--- a/scss/blocks/cols/_cols.scss
+++ b/scss/blocks/cols/_cols.scss
@@ -1,6 +1,6 @@
 .b-cols {
 	@include clearfix();
-  margin: 0 auto;
+  margin: 66px auto 0;
 
 	.col {
 		float: left;
@@ -120,5 +120,32 @@
       color: #7e7e7e;
     }
 
+  }
+}
+
+.b-cols.col-one.style-b{
+
+  .col {
+    width: 1122px;
+
+    .col-wrapper {
+      padding: 0;
+
+      img {
+        @include border-radius(0 0 25px 25px);
+      }
+    }
+
+    .col-item {
+      border: none;
+
+      h3 {
+        background: image_url("bg/bg-colum-h-style-b.png") repeat-x;
+
+        span {
+          background: #37a8a6;
+        }
+      }
+    }
   }
 }
