--- a/theme/css/styles.css
+++ b/theme/css/styles.css
@@ -852,7 +852,7 @@ ul li {
 }
 
 .b-cols {
-  margin: 0 auto;
+  margin: 66px auto 0;
 }
 .b-cols:after {
   content: " ";
@@ -965,6 +965,27 @@ ul li {
   color: #7e7e7e;
 }
 
+.b-cols.col-one.style-b .col {
+  width: 1122px;
+}
+.b-cols.col-one.style-b .col .col-wrapper {
+  padding: 0;
+}
+.b-cols.col-one.style-b .col .col-wrapper img {
+  -moz-border-radius: 0 0 25px 25px;
+  -webkit-border-radius: 0;
+  border-radius: 0 0 25px 25px;
+}
+.b-cols.col-one.style-b .col .col-item {
+  border: none;
+}
+.b-cols.col-one.style-b .col .col-item h3 {
+  background: url('../images/bg/bg-colum-h-style-b.png') repeat-x;
+}
+.b-cols.col-one.style-b .col .col-item h3 span {
+  background: #37a8a6;
+}
+
 .think-us {
   position: absolute;
   bottom: 0;
@@ -1051,6 +1072,27 @@ ul li {
 .text-img-wrapper .b-text-img .img {
   width: 31%;
   float: right;
+}
+
+.b-text-img.style-b .text {
+  width: 41%;
+}
+.b-text-img.style-b .text h2 {
+  text-transform: none;
+}
+.b-text-img.style-b .text .btn-wrapper {
+  text-align: left;
+}
+.b-text-img.style-b .text p {
+  margin-bottom: 30px;
+}
+.b-text-img.style-b .img {
+  width: 59%;
+}
+.b-text-img.style-b .img img {
+  -moz-border-radius: 25px;
+  -webkit-border-radius: 25px;
+  border-radius: 25px;
 }
 
 /*
